Fixed card alignment

--- a/css/app.css
+++ b/css/app.css
@@ -6850,11 +6850,12 @@ header {
     box-shadow: 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
     width: 100%;
     display: flex;
-    flex-direction: row; }
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: left; }
   #work .work-icon {
-    margin-right: 1rem;
-    align-self: center;
-    justify-self: center; }
+    margin-right: 1rem; }
 
 .row-container {
   padding: 6rem 5rem;
