--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -96,13 +96,15 @@ header {
         width: 100%;
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
 
     }
 
     .work-icon {
         margin-right: 1rem;
-        align-self: center;
-        justify-self: center;
+        
     }
 
 }
